# event-importer

./: .env.example  .gitignore  CLAUDE.md  CLEANUP_PROGRESS.md  Makefile  Makefile.dist  README.md  diagnose_dry_run.py  env.example  install.py  package-lock.json  pyproject.toml  test_persistence.py  test_rebuild_api.py  test_ticketfairy_debug.py
.github/workflows/: tests.yml
app/: __init__.py  agent.py  cli.py  config.py  engine.py  error_messages.py  errors.py  first_run.py  genres.py  http.py  importer.py  main.py  prompts.py  router.py  schemas.py  server.py  startup.py  url_analyzer.py  validators.py  version.py
app/agents/: __init__.py  dice_agent.py  image_agent.py  ra_agent.py  ticketmaster_agent.py  web_agent.py
app/cli/: __init__.py  components.py  core.py  error_capture.py  errors.py  formatters.py  styles.py  theme.py  utils.py
app/core/: __init__.py  error_messages.py  errors.py  importer.py  progress.py  router.py  schemas.py  startup.py
app/data/: __init__.py  genres.py
app/data/data/: events.db
app/extraction_agents/: base.py
app/extraction_agents/providers/: __init__.py  dice.py  image.py  ra.py  ticketmaster.py  web.py
app/integrations/: __init__.py  base.py
app/integrations/ticketfairy/: __init__.py  base.py  cli.py  client.py  config.py  mcp_tools.py  routes.py  selectors.py  submitter.py  transformer.py
app/integrations/ticketfairy/api/: __init__.py  routes.py
app/integrations/ticketfairy/cli/: __init__.py  commands.py  display.py  main.py
app/integrations/ticketfairy/mcp/: __init__.py  tools.py
app/integrations/ticketfairy/shared/: __init__.py  client.py  config.py  debug_submitter.py  statistics.py  submitter.py
app/integrations/ticketfairy/utils/: __init__.py  debug_selector.py  selectors.py  transformer.py
app/interfaces/: __init__.py
app/interfaces/api/: __init__.py  server.py
app/interfaces/api/middleware/: __init__.py  cors.py  logging.py
app/interfaces/api/models/: __init__.py  requests.py  responses.py
app/interfaces/api/routes/: __init__.py  events.py  health.py  statistics.py
app/interfaces/cli/: __init__.py  commands.py  components.py  core.py  error_capture.py  events.py  formatters.py  import_event.py  rebuild.py  runner.py  settings.py  stats.py  theme.py  utils.py  validate.py
app/interfaces/mcp/: __init__.py  server.py
app/services/: __init__.py  claude.py  genre.py  image.py  integration_discovery.py  llm.py  openai.py  security_detector.py  zyte.py
app/services/llm/: base.py  prompts.py  service.py
app/services/llm/providers/: claude.py  openai.py
app/shared/: __init__.py  agent.py  api_keys_info.py  http.py  path.py  project.py  service_errors.py  statistics.py  timezone.py  url_analyzer.py
app/shared/constants/: __init__.py  error_messages.py  state_mappings.py
app/shared/database/: __init__.py  connection.py  models.py  utils.py
config/: __init__.py  api.py  http.py  loader.py  paths.py  processing.py  project.py  retry.py  runtime.py  settings.py  storage.py
data/: events.db
docs/: API.md  ARCHITECTURE.md  BUILD_PROCESS.md  CROSS_PLATFORM.md  DEVELOPMENT.md  GENRE_ENHANCER.md  IMAGE_ENHANCER.md  INTEGRATIONS.md  MCP.md  USAGE.md
installer/: README.md  __init__.py  __main__.py  api_keys_info.py  constants.py  core.py  downloader.py  first_run.py  main.py  paths.py  ui.py  utils.py  validation.py  validators.py
installer/cli/: __init__.py  app.py  themes.py
installer/cli/display/: __init__.py  directories.py  download.py  launch.py  shell.py  utils.py
installer/components/: __init__.py  api_keys.py  app_config.py  claude_desktop.py  dependencies.py  environment.py  migration.py  settings_manager.py  updater.py  updater_config.py  upgrade.py
installer/operations/: __init__.py  configure.py  download.py  migrate.py
installer/services/: __init__.py  directory_service.py  download_service.py  migration_service.py  settings_service.py  shell_service.py  update_service.py  validation_service.py
installer/utils/: __init__.py  system.py
scripts/: api_example.py  conftest.py  coverage_report.py  create_installer_package.sh  generate_badge.py  sync_version.py  test_date_parser.py  test_dice_api.py  test_error_capture.py  test_genre_enhancer.py  test_google_custom_search_api.py  test_image_enhancer.py  test_image_search.py  test_import.py  test_importer.py  test_ra_api.py  test_ra_api.sh  test_ra_genres.py  test_runner.py  test_url_analyzer.py  update_coverage.py
tests/: conftest.py  helpers.py  test_rebuild_description.py  test_rebuild_descriptions.py  test_rebuild_genres.py  test_rebuild_image.py  test_startup.py  test_update_event.py  test_validators.py
tests/agents/: test_ticketmaster_agent.py
tests/core/: test_progress.py  test_schemas.py
tests/fixtures/: dice_artist_search_response.json  dice_event_response.json  dice_search_response.json  ra_graphql_response.json
tests/integration/: conftest.py  test_date_parser.py  test_dice_api.py  test_genre_enhancer.py  test_google_custom_search_api.py  test_image_enhancer.py  test_importer.py  test_ra_genres.py  test_update_saves_to_db.py  test_url_analyzer.py
tests/integration_tests/: test_date_parser.py  test_genre_enhancer.py  test_google_custom_search_api.py  test_image_enhancer.py  test_importer.py  test_ra_genres.py  test_url_analyzer.py
tests/integrations/ticketfairy/: test_client.py  test_mcp_tools.py  test_submitter.py
tests/interfaces/api/: test_health.py
tests/interfaces/cli/: test_events.py  test_main.py
tests/interfaces/mcp/: test_server.py
tests/services/: test_llm.py
tests/shared/: test_database_utils.py  test_statistics.py  test_timezone.py
tests/unit/agents/: test_ticketmaster_agent.py
tests/unit/core/: test_importer_agent_selection.py  test_progress.py  test_schemas.py  test_startup.py
tests/unit/event_data/: test_rebuild_description.py  test_rebuild_descriptions.py  test_rebuild_genres.py  test_rebuild_image.py  test_update_event.py
tests/unit/extraction_agents/: test_ticketmaster.py
tests/unit/services/: test_llm.py
tests/unit/shared/: test_database_utils.py  test_timezone.py
(+5 files in other folders)
