[project]
name = "event-importer"
version = "0.1.0"
description = "MCP server for importing structured event data from websites"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "anthropic>=0.39.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "websockets>=11.0",
    "beautifulsoup4>=4.12.0",
    "pillow>=10.0.0",
    "tenacity>=9.1.2",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.9.1",
    "nh3>=0.2.20",
    "python-dateutil>=2.9.0",
    "price-parser>=0.3.4",
]

[project.scripts]
event-importer = "app.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = ["E501"]  # line too long, handled by black

[tool.ruff.isort]
known-first-party = ["app"]

[tool.black]
line-length = 88
target-version = ["py310"]