[project]
name = "event-importer"
version = "0.1.0"
description = "MCP server for importing structured event data from websites"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "anthropic>=0.54.0",
    "openai>=1.12.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "certifi>=2025.4.26",
    "websockets>=11.0",
    "beautifulsoup4>=4.12.0",
    "pillow>=10.0.0",
    "tenacity>=9.1.2",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.9.1",
    "nh3>=0.2.20",
    "python-dateutil>=2.9.0",
    "price-parser>=0.3.4",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
]

[project.scripts]
event-importer = "app.main:main"
event-importer-cli = "app.interfaces.cli:run_cli"
event-importer-mcp = "app.interfaces.mcp.server:run"
event-importer-api = "app.interfaces.api.server:run"
ticketfairy-submit = "app.integrations.ticketfairy.cli:main"

[project.entry-points."app.integrations"]
ticketfairy = "app.integrations.ticketfairy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
    "rich>=13.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.black]
line-length = 88
target-version = ["py310"]